Add extract_window.py. WIP Snakefile

--- a/config.yaml
+++ b/config.yaml
@@ -2,3 +2,9 @@
 work_dir: "/home/antton/Tiny_Projects/tidyGenomeBrowser_test/"  # Path to the working directory
 
 gwas_dir: "/home/antton/Tiny_Projects/tidyGenomeBrowser_test/data/GWAS"  # Directory containing the .gwas files
+
+chromosome: ""
+
+start: ""
+
+end: ""
